Oct 09, 2005: <l-n@users.sourceforge.net>
- update NEWS
- show anti-cheat icon for Doom3 and Quake4 (thanks Timothee Besset for
  reporting)

Oct 07, 2005: <l-n@users.sourceforge.net>
- initial Quake4 support (thanks to Timothee Besset for providing
  the necessary info)

Sep 20, 2005: Jordi Mallach <jordi@sindominio.net>
- update Catalan transaltion

Sep 13, 2005: <l-n@users.sourceforge.net>
- get rid of libtool
- set version to 1.0.3.1
- another attempt to finally fix gensyms.pl

Sep 12, 2005: <l-n@users.sourceforge.net>
- fix integer overflow in TGA loader

Sep 09, 2005: <l-n@users.sourceforge.net>
- fix some typos in German translation

Sep 07, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- docu update and master server cleanup by Steffen Pankratz

Aug 23, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix redial dialog not honoring private clients (reported by Julien
  Langer)

Aug 20, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix gamespy and descent exec functions (reported by Steffen
  Pankratz)

Aug 14, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix saving of server filters (reported by Steffen Pankratz)

Aug 07, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add script install button
- add multiple sort modes per column (#1253101)
- fix compiler warnings
- add delete button for quickfilter
- update German translation

Aug 01, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add demo script

Jul 03, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for plugin scripts

Jun 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- move generic code for running a program into util.c
- Nexuiz support
- check for q3 based gametypes before parsing the server info

Jun 01, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add doom3 protocol 1.40 to menu (Steffen Pankratz)

Apr 29, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- honor setting to ignore bots when copying server info to clipboard
