@@ -169,9 +169,9 @@ struct game games[] = {
     exec_client         : q3_exec,
     custom_cfgs         : quake_custom_cfgs,
     save_info           : quake_save_info,
-    init_maps           : doom3_init_maps,
-    has_map             : doom3_has_map,
-    get_mapshot         : doom3_get_mapshot,
+    init_maps           : quake4_init_maps,
+    has_map             : quake4_has_map,
+    get_mapshot         : quake4_get_mapshot,
     arch_identifier     : "si_version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
