@@ -161,9 +161,9 @@
 	<icon>q4.xpm</icon>
 	<analyze_serverinfo>doom3_analyze_serverinfo</analyze_serverinfo>
 	<config_is_valid>config_is_valid_generic</config_is_valid>
-	<init_maps>doom3_init_maps</init_maps>
-	<has_map>doom3_has_map</has_map>
-	<get_mapshot>doom3_get_mapshot</get_mapshot>
+	<init_maps>quake4_init_maps</init_maps>
+	<has_map>quake4_has_map</has_map>
+	<get_mapshot>quake4_get_mapshot</get_mapshot>
 	<arch_identifier>si_version</arch_identifier>
 	<command>quake4</command>
 	<cmd_or_dir_changed>doom3_cmd_or_dir_changed</cmd_or_dir_changed>
