@@ -2,6 +2,7 @@ Oct 09, 2005: <l-n@users.sourceforge.net>
 - update NEWS
 - show anti-cheat icon for Doom3 and Quake4 (thanks Timothee Besset for
   reporting)
+- try to support Quake4 map previews
 
 Oct 07, 2005: <l-n@users.sourceforge.net>
 - initial Quake4 support (thanks to Timothee Besset for providing
